# phone_info

./: LICENSE  Makefile  Pipfile  README.md  manage.py  pyproject.toml
app/: admin.py  apps.py  constants.py  models.py  serializers.py  tests.py  urls.py  views.py
docker/: docker-compose.phone.yaml
parser/: config.yml  main.py
parser/app/: config.py  db.py  files_loader.py  logger.py  parser_page.py  processing.py  upload_db.py
phone_info/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
